--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,6 @@
-AddType application/x-web-app-manifest+json .webapp
+AddType text/cache-manifest .manifest
+
+<Files .cache.manifest>
+    ExpiresActive On
+    ExpiresDefault "access"
+</Files>
